--- a/index.html
+++ b/index.html
@@ -40,7 +40,23 @@
         </div>
     </header>
     <section class="graphSection">
-        <canvas id="myCanvas" class="myCanvas" width="228" height="228" style="margin-left:500px"></canvas>
+        <canvas id="myCanvas" class="myCanvas" width="245" height="228"></canvas>
+        <div class="dropdown">
+
+            <button class="btn btn-secondary dropdown-toggle clear" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    Clear
+  </button >
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="#" onclick="clearZeros()">Clear All Zeroes</a>
+                <a class="dropdown-item" href="#" onclick="clearPoles()">Clear All Poles</a>
+                <a class="dropdown-item" href="#" onclick="clearAll()">Clear All</a>
+            </div>
+        </div>
+        
+    </section>
+    <section>
+        <canvas id="magnitudeRespCanvas" class="magnitudeRespCanvas" width="228" height="228"></canvas>
+        <canvas id="phaseRespCanvas" class="phaseRespCanvas" width="228" height="228"></canvas>
     </section>
 
 
