--- a/index.html
+++ b/index.html
@@ -40,33 +40,50 @@
         </div>
     </header>
     <section class="graphSection">
-        <canvas id="myCanvas" class="myCanvas" width="245" height="228"></canvas>
-        <div class="dropdown">
-
-            <button class="btn btn-secondary dropdown-toggle clear" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    Clear
-  </button >
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" href="#" onclick="clearZeros()">Clear All Zeroes</a>
-                <a class="dropdown-item" href="#" onclick="clearPoles()">Clear All Poles</a>
-                <a class="dropdown-item" href="#" onclick="clearAll()">Clear All</a>
-            </div>
+        <div>
+            <canvas id="myCanvas" class="myCanvas" width="245" height="228"></canvas>
         </div>
-        
+        <div class="UnitCircleButtons">
+            <button type="button" class="btn btn-dark" onclick="AddZeros()">Add Zero</button>
+            <button type=" button " class="btn btn-dark " onclick="AddPoles() ">Add Poles</button>
+            <div class="dropdown">
+                <button class="btn btn-dark dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Clear
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <a class="dropdown-item " href="# " onclick="clearZeros() ">Clear All Zeroes</a>
+                    <a class="dropdown-item " href="# " onclick="clearPoles() ">Clear All Poles</a>
+                    <a class="dropdown-item " href="# " onclick="clearAll() ">Clear All</a>
+                </div>
+            </div>
+            <!-- <div class="dropdown">
+                <button class="btn btn-dark dropdown-toggle " type="button " id="dropdownMenuButton " data-toggle="dropdown " aria-haspopup="true " aria-expanded="false ">
+    Clear
+    
+  </button >
+            <div class="dropdown-menu " aria-labelledby="dropdownMenuButton ">
+                <a class="dropdown-item " href="# " onclick="clearZeros() ">Clear All Zeroes</a>
+                <a class="dropdown-item " href="# " onclick="clearPoles() ">Clear All Poles</a>
+                <a class="dropdown-item " href="# " onclick="clearAll() ">Clear All</a>
+            </div>
+        </div> -->
+        </div>
+
+
     </section>
     <section>
-        <canvas id="magnitudeRespCanvas" class="magnitudeRespCanvas" width="228" height="228"></canvas>
-        <canvas id="phaseRespCanvas" class="phaseRespCanvas" width="228" height="228"></canvas>
+        <canvas id="magnitudeRespCanvas " class="magnitudeRespCanvas " width="228 " height="228 "></canvas>
+        <canvas id="phaseRespCanvas " class="phaseRespCanvas " width="228 " height="228 "></canvas>
     </section>
 
 
 
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js " integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj " crossorigin="anonymous "></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js " integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN " crossorigin="anonymous "></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js " integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF " crossorigin="anonymous "></script>
 
-    <script src="js/main.js"></script>
+    <script src="js/main.js "></script>
     <script>
     </script>
 </body>
