--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </header>
     <section class="graphSection">
         <div>
-            <canvas id="myCanvas" class="myCanvas" width="245" height="228"></canvas>
+            <canvas onclick="showCoords(event)" id="myCanvas" class="myCanvas" width="245" height="228"></canvas>
         </div>
         <div class="UnitCircleButtons">
             <button type="button" class="btn btn-dark" onclick="AddZeros()">Add Zero</button>
