--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </nav>
         </div>
     </header>
-    <section class="graphSection">
+    <!-- <section class="graphSection">
         <div>
             <canvas onclick="showCoords(event)" id="myCanvas" class="myCanvas" width="245" height="228"></canvas>
         </div>
@@ -56,17 +56,7 @@
                     <a class="dropdown-item " href="# " onclick="clearAll() ">Clear All</a>
                 </div>
             </div>
-            <!-- <div class="dropdown">
-                <button class="btn btn-dark dropdown-toggle " type="button " id="dropdownMenuButton " data-toggle="dropdown " aria-haspopup="true " aria-expanded="false ">
-    Clear
-    
-  </button >
-            <div class="dropdown-menu " aria-labelledby="dropdownMenuButton ">
-                <a class="dropdown-item " href="# " onclick="clearZeros() ">Clear All Zeroes</a>
-                <a class="dropdown-item " href="# " onclick="clearPoles() ">Clear All Poles</a>
-                <a class="dropdown-item " href="# " onclick="clearAll() ">Clear All</a>
-            </div>
-        </div> -->
+
         </div>
 
 
@@ -74,11 +64,41 @@
     <section>
         <canvas id="magnitudeRespCanvas " class="magnitudeRespCanvas " width="228 " height="228 "></canvas>
         <canvas id="phaseRespCanvas " class="phaseRespCanvas " width="228 " height="228 "></canvas>
-    </section>
+    </section> -->
+    <div class="container-fluid graphSection">
+        <div class="row">
+            <div class="col-lg-4 col-md-12 text-center">
+                <div>
+                    <canvas id="myCanvas" onclick="showCoords(event)" class="myCanvas" width="245" height="228"></canvas>
+                </div>
+                <div class="UnitCircleButtons">
+                    <button type="button" class="btn btn-dark" onclick="AddZeros()">Add Zero</button>
+                    <button type=" button " class="btn btn-dark " onclick="AddPoles() ">Add Poles</button>
+                    <div class="dropdown">
+                        <button class="btn btn-dark dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          Clear
+                        </button>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <a class="dropdown-item " href="# " onclick="clearZeros() ">Clear All Zeroes</a>
+                            <a class="dropdown-item " href="# " onclick="clearPoles() ">Clear All Poles</a>
+                            <a class="dropdown-item " href="# " onclick="clearAll() ">Clear All</a>
+                        </div>
+                    </div>
+                </div>
 
 
+            </div>
+            <div class="col-lg-8 col-md-12 curve_chart">
+
+                <div id="curve_chart" class="curve2"></div>
+
+            </div>
+
+        </div>
+    </div>
 
 
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js " integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj " crossorigin="anonymous "></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js " integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN " crossorigin="anonymous "></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js " integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF " crossorigin="anonymous "></script>
