Conjugate function is added

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                 <div class="UnitCircleButtons">
                     <button type="button" class="btn btn-dark" onclick="AddZeros()">Add Zero</button>
                     <button type=" button " class="btn btn-dark " onclick="AddPoles() ">Add Pole</button>
+                    <button type=" button " class="btn btn-dark " onclick=" Conjugate(); ">Conjugate</button>
                     <div class="dropdown">
                         <button class="btn btn-dark dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Zeroes
