add Conjugate, Delete and some fixes

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                     <button type="button" class="btn btn-dark" onclick="AddZeros()">Add Zero</button>
                     <button type=" button " class="btn btn-dark " onclick="AddPoles() ">Add Pole</button>
                     <button type=" button " class="btn btn-dark " onclick=" Conjugate(); ">Conjugate</button>
+                    <button type=" button " class="btn btn-dark " onclick=" Delete(); ">Delete</button>
                     <div class="dropdown">
                         <button class="btn btn-dark dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Zeroes
