--- a/index.html
+++ b/index.html
@@ -41,59 +41,90 @@
     </header>
     <div class="container-fluid graphSection">
         <div class="row">
-            <div class="col-lg-4 col-md-12 text-center">
-                <div>
-                    <canvas id="myCanvas" onclick="showCoords(event)" class="myCanvas" width="245" height="228"></canvas>
-                </div>
-                <div class="UnitCircleButtons">
-                    <button type="button" class="btn btn-dark" onclick="AddZeros()">Add Zero</button>
-                    <button type=" button " class="btn btn-dark " onclick="AddPoles() ">Add Pole</button>
-                    <button type=" button " class="btn btn-dark " onclick=" Conjugate(); ">Conjugate</button>
-                    <button type=" button " class="btn btn-dark " onclick=" Delete(); ">Delete</button>
-                    <div class="dropdown">
-                        <button class="btn btn-dark dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Zeroes
-                        </button>
-                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                            <a class="dropdown-item "  onclick="currentIndx = 0; zeroFlag = true; poleFlag = false; ">Zero1</a>
-                            <a class="dropdown-item "  onclick="currentIndx = 1; zeroFlag = true; poleFlag = false;  ">Zero2</a>
-                            <a class="dropdown-item "  onclick="currentIndx = 2; zeroFlag = true; poleFlag = false;  ">Zero3</a>
-                        </div>
+            <div class="c">
+                <div class="graphContainer">
+                    <div id='magGraph' class="magGraph graph">
+                        <!-- Plotly chart will be drawn inside this DIV -->
                     </div>
-                    <div class="dropdown">
-                        <button class="btn btn-dark dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Poles
-                        </button>
-                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                            <a class="dropdown-item "  onclick="currentIndx = 0; zeroFlag = false; poleFlag = true; ">Pole1</a>
-                            <a class="dropdown-item "  onclick="currentIndx = 1; zeroFlag = false; poleFlag = true;  ">Pole2</a>
-                            <a class="dropdown-item "  onclick="currentIndx = 2; zeroFlag = false; poleFlag = true;  ">Pole3</a>
-                        </div>
-                    </div>
-                    <div class="dropdown">
-                        <button class="btn btn-dark dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Clear
-                        </button>
-                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <a class="dropdown-item " href="# " onclick="clearZeros() ">Clear All Zeroes</a>
-                            <a class="dropdown-item " href="# " onclick="clearPoles() ">Clear All Poles</a>
-                            <a class="dropdown-item " href="# " onclick="clearAll() ">Clear All</a>
-                        </div>
+                    <div id='PhaseGraph' class="PhaseGraph graph">
+                        <!-- Plotly chart will be drawn inside this DIV -->
                     </div>
                 </div>
+                <div class="secondGraphContainer">
+                    <div class="graph2">
+                        <canvas id="myCanvas" onclick="showCoords(event)" class="myCanvas" width="245" height="228"></canvas>
+                        <div class="UnitCircleButtons">
+                            <button type="button" class="btn btn-dark" onclick="AddZeros()">Add Zero</button>
+                            <button type=" button " class="btn btn-dark " onclick="AddPoles() ">Add Pole</button>
+                            <button type=" button " class="btn btn-dark " onclick=" Conjugate(); ">Conjugate</button>
+                            <button type=" button " class="btn btn-dark " onclick=" Delete(); ">Delete</button>
+                            <div class="dropdown">
+                                <button class="btn btn-dark dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Zeroes
+                                </button>
+                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                    <a class="dropdown-item " onclick="currentIndx = 0; zeroFlag = true; poleFlag = false; ">Zero1</a>
+                                    <a class="dropdown-item " onclick="currentIndx = 1; zeroFlag = true; poleFlag = false;  ">Zero2</a>
+                                    <a class="dropdown-item " onclick="currentIndx = 2; zeroFlag = true; poleFlag = false;  ">Zero3</a>
+                                </div>
+                            </div>
+                            <div class="dropdown">
+                                <button class="btn btn-dark dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Poles
+                                </button>
+                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                    <a class="dropdown-item " onclick="currentIndx = 0; zeroFlag = false; poleFlag = true; ">Pole1</a>
+                                    <a class="dropdown-item " onclick="currentIndx = 1; zeroFlag = false; poleFlag = true;  ">Pole2</a>
+                                    <a class="dropdown-item " onclick="currentIndx = 2; zeroFlag = false; poleFlag = true;  ">Pole3</a>
+                                </div>
+                            </div>
+                            <div class="dropdown">
+                                <button class="btn btn-dark dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Clear
+                                </button>
+                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                    <a class="dropdown-item " href="# " onclick="clearZeros() ">Clear All Zeroes</a>
+                                    <a class="dropdown-item " href="# " onclick="clearPoles() ">Clear All Poles</a>
+                                    <a class="dropdown-item " href="# " onclick="clearAll() ">Clear All</a>
+                                </div>
+                                <a href=# id='process_input'><button class='btn btn-dark'>Submit</button></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="graph2">
+                        <div id='correctedPhase' class="correctedPhase ">
+                            <!-- Plotly chart will be drawn inside this DIV -->
+
+                        </div>
+                        <div class="dropdown" style="padding-bottom: 30px;">
+                            <button class="btn btn-dark dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Value of A
+                            </button>
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                <a class="dropdown-item " href="# " onclick="">0.1</a>
+                                <a class="dropdown-item " href="# " onclick="">0.2</a>
+                                <a class="dropdown-item " href="# " onclick="">0.3</a>
+                                <a class="dropdown-item " href="# " onclick="">0.4</a>
+                                <a class="dropdown-item " href="# " onclick="">0.5</a>
+                                <a class="dropdown-item " href="# " onclick="">0.6</a>
+                                <a class="dropdown-item " href="# " onclick="">0.7</a>
+                                <a class="dropdown-item " href="# " onclick="">0.8</a>
+                                <a class="dropdown-item " href="# " onclick="">0.9</a>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
 
 
             </div>
-            <div class="col-lg-8 col-md-12 curve_chart">
 
-                <div id="curve_chart" class="curve2"></div>
-
-            </div>
 
         </div>
     </div>
 
-
+    <script src='https://cdn.plot.ly/plotly-2.0.0.min.js'></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js " integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj " crossorigin="anonymous "></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js " integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN " crossorigin="anonymous "></script>
